@@ -5,6 +5,7 @@
 	* Minotaurs respect Elbereth
 	* Bones level tracking
 	* Conduct: Racial armor tracking
+	* Reduce occurrences of hint daemon to once per game
 
 	* new dungeon features:
 	  - muddy swamp (from NetHack Brass)
